Use java 8